[Fix] Fixed scrollbar issues

--- a/css/koleksi.css
+++ b/css/koleksi.css
@@ -17,7 +17,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    gap: 40px 80px;
+    gap: 40px 70px;
     padding: 20px 50px;
 }
 .koleksi-container .buku{
