--- a/css/peminjaman.css
+++ b/css/peminjaman.css
@@ -10,3 +10,47 @@
     color: #fff;
 }
 /* == End Selected Sidebar == */
+.pinjam-hdr{
+    width: 93%;
+    height: 8vh;
+    margin: 30px auto 10px;
+    background-color: var(--secondary);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFB000;
+}
+.pinjam-hdr .header{
+    font-family: var(--script);
+    font-size: 24px;
+}
+.konfirmasi-container{
+    position: relative;
+    width: 80vw;
+    height: 35vh;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
+    overflow: hidden;
+}
+.buku-content{
+    flex: 0 0 auto; /* Tetapkan lebar konten buku ke ukuran aslinya */
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 5px;
+    height: 30vh;
+}
+.pinjamScrollbar__rail-x {
+    position: absolute; /* Persyaratan 2 */
+    bottom: 0; /* Atur posisi scrollbar-x */
+    left: 0; /* Atur posisi scrollbar-x */
+}
+
+.pinjamScrollbar__rail-y {
+    position: absolute; /* Persyaratan 2 */
+    top: 0; /* Atur posisi scrollbar-y */
+    right: 0; /* Atur posisi scrollbar-y */
+}
